[build-system]
requires = [
    "setuptools>=60",
    "setuptools-scm>=8.0"]
build-backend = "setuptools.build_meta"

[project]
name = "omex_frog"
authors = [
    {name = "Frank T. Bergmann", email = "frank.bergmann@bioquant.uni-heidelberg.de"},
]
description = "OMEX FROG Tools"
readme = "README.md"
requires-python = ">=3.7"
keywords = ["FROG", "OMEX"]
license = {text = "BSD-2-Clause"}
classifiers = [
    "Programming Language :: Python :: 3",
]

dynamic = ["version"]

[project.scripts]
guess_format = "omex_frog.formats:main"

[tool.setuptools_scm]
write_to = "src/omex_frog/_version.py"